frontend/src/scss/layout/_buttons.scss
@use '../abstracts' as *;
@use '../theme/buttons' as *;
@use '../theme/colors' as *;

.btn + .btn {
	margin-left: em(16);
}

.btn {
	margin-top: em(14);
}

.btn-link {
	margin-top: 0px;
	padding: 0px;
}

.btn--icon {
	padding: em(7);
	margin-top: 0px;
}

.btn--medium {
	padding: $btn-padding-y-md $btn-padding-x-md;
	font-size: $btn-font-size-md;
}

.btn--input {
	background-repeat: no-repeat;
	background-position: center;
	padding: em(16);

	&-default {
		background-color: $primary;
		background-image: url('../../assets/icons/right-arrow-white.svg');
	}

	&-loading {
		background-image: url('../../assets/icons/loading.svg');
	}

	&-success {
		background-color: $green;
		background-image: url('../../assets/icons/checkmark.svg');
	}
}

.btn--xsmall {
	padding: $btn-padding-y-xs $btn-padding-x-xs;
}

.btn--tickets {
	&.plain {
		&::before {
			content: url($data-svg-prefix + map-get($icons, 'ticketWhite'));
		}
	}
	&.secondary {
		&::before {
			content: url($data-svg-prefix + map-get($icons, 'ticketSecondary'));
		}
	}
}

